test/langtools/tools/javac/valhalla/primitive-classes/CheckFlattenableFlagFromClass.out
CheckFlattenableFlagFromClass.java:11:15: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: compiler.misc.type.null, FlattenableFlagFromClass.V)
CheckFlattenableFlagFromClass.java:12:16: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: compiler.misc.type.null, FlattenableFlagFromClass.V[])
2 errors
